--- a/app/src/main/res/layout/res_list_activity.xml
+++ b/app/src/main/res/layout/res_list_activity.xml
@@ -170,12 +170,13 @@
                 </HorizontalScrollView>
                 <androidx.core.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recycler_view"
+                            android:layout_marginTop="10dp"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
                         </androidx.recyclerview.widget.RecyclerView>
@@ -205,22 +206,4 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="검색" />
-    </LinearLayout>
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center|top"
-                android:layout_marginTop="20dp"
-                android:background="#FFFFFF">
-
-            </androidx.recyclerview.widget.RecyclerView>
-
-
-        </LinearLayout>
-    </ScrollView>
-
-
-</LinearLayout> !-->
+    </LinearLayout> !-->
