--- a/app/src/main/res/layout/review_image1.xml
+++ b/app/src/main/res/layout/review_image1.xml
@@ -42,7 +42,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="40dp"
             android:layout_weight="1"
-            android:text="test"
+            android:hint="메뉴 이름"
             android:textColor="#000000"
             android:textSize="20sp" />
     </LinearLayout>
@@ -68,10 +68,20 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="40dp"
-            android:layout_weight="1"
-            android:text="test"
+            android:layout_weight="0"
             android:textColor="#000000"
             android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/percent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_weight="0"
+            android:text="%"
+            android:textColor="#000000"
+            android:textSize="20sp" />
+
     </LinearLayout>
 
     <Button
